[package]
name = "tea_cache"
version = "0.1.0"
authors = ["luoluo yu <>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", default-features = false }
tea_error = { path = "../error"}
parking_lot = "0.11"
tokio = { version = "1", default-features = false, features = ["macros", "rt", "sync", "time"] }
tracing = "0.1.29"

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["test-util", "time"] }
tea_tracing = { path = "../tracing", features = ["ansi"] }