[package]
name = "tea_drive"
version = "0.1.0"
authors = ["luoluo yu <>"]
edition = "2021"
description = "drink tea 系统关联驱动"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.130"
rand = "*"
#条件编译
cfg-if = "1.0.0"
