[package]
name = "tea_io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
futures = { version = "0.3", default-features = false }
bytes = "1"
tokio = { version = "1", features = ["io-util", "net"] }
tokio-test = { version = "0.4", optional = true }
tokio-util = { version = "0.6", features = ["io"] }
pin-project = "1"
tea_errno = { path = "../errno" }
[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }