[package]
name = "tea_stack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tea_error = {path ="../error"}
futures = { version = "0.3", default-features = false }
pin-project = "1"
thiserror = "1"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
