[package]
name = "tea_system"
version = "0.1.0"
authors = ["luoluo yu <>"]
edition = "2021"
description = """
Unsafe code for accessing system-level counters for memory & CPU usage.
"""
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.29"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
procinfo = "0.4.2"