[package]
name = "Drink_tea_tracing"
version = "0.1.1"
authors = ["luoluo yu <>"]
edition = "2021"
description = "drink tea 日志追踪"

[features]
default = []
ansi = ["tracing-subscriber/ansi"]

[dependencies]
#linkerd-error = { path = "../error" }
tokio = { version = "1", features = ["time"] }
tracing = "0.1.29"
tracing-log = "0.1.2"

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter","smallvec", "tracing-log", "json", "parking_lot"]

