[package]
name = "tea_app_core"
version = "0.1.0"
authors = ["luoluo yu <>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
drain = { version = "0.1.0", features = ["retain"] }
futures = { version = "0.3", default-features = false }
ipnet = "2.3"
regex = "1.5.4"
serde_json = "1"
thiserror = "1.0"
parking_lot = "0.11"
pin-project = "1"
tokio = { version = "1", features = ["macros", "sync", "parking_lot"]}
tokio-stream = { version = "0.1.8", features = ["time"] }
tea_addr = {path = "../../addr"}
tea_dns = {path = "../../dns"}
tea_tracing = {path = "../../tracing"}
tea_error = { path = "../../error"}