[package]
name = "tea_app_inbound"
version = "0.1.0"
authors = ["luoluo yu <>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", default-features = false }
bytes = "1"
parking_lot = "0.11"
thiserror = "1.0"
tokio = { version = "1", features = ["sync"] }
tower = { version = "0.4.10", features = ["util"] }
tracing = "0.1.29"
tea_app_core = {path = "../core"}